<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nguye.restaurant_project.update_button.UpdateActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/activity_update_nhommonan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textSize="17dp"
            android:layout_weight="0.12" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerMenu"
            android:layout_weight="0.07"
            android:spinnerMode="dropdown" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/activity_update_tenmon"
            android:ems="10"
            android:id="@+id/edtsTenMon" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/activity_update_giatien"
            android:id="@+id/edtiGiaTien" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_weight="0.44">

            <Button
                android:text="@string/activity_update_button_chonanh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPickPhoto" />

            <ImageView
                android:id="@+id/imgShowPhoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY" />

        </LinearLayout>

        <Button
            android:text="@string/activity_update_button_OK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdateOk" />

    </LinearLayout>
</LinearLayout>
