<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e8ed"
    android:weightSum="1">

    <Button
        android:text="@string/activity_update_menu_themnhommonan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textSize="15dp"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:id="@+id/btnAddGroupMenu"
        android:drawableLeft="@drawable/icon64pxmenufood"
        android:layout_weight="0.07" />

    <Button
        android:text="@string/activity_update_menu_themmonan"
        android:fontFamily="serif"
        android:textSize="15dp"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddFood"
        android:drawableLeft="@drawable/icon64pxfood"
        android:layout_weight="0.07" />
    <Button
        android:text="@string/activity_update_menu_themban"
        android:fontFamily="serif"
        android:textSize="15dp"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddTable"
        android:drawableLeft="@drawable/icon64pxtable"
        android:layout_weight="0.07" />
    <Button
        android:text="@string/activity_update_menu_themkhuvuc"
        android:fontFamily="serif"
        android:textSize="15dp"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddKhuVuc"
        android:drawableLeft="@drawable/icon64pxarea"
        android:layout_weight="0.07" />
    <Button
        android:text="@string/activity_update_menu_nv"
        android:fontFamily="serif"
        android:textSize="15dp"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnThongtinNV"
        android:drawableLeft="@drawable/employee"
        android:layout_weight="0.07" />
    <Button
        android:text="@string/activity_update_menu_capnhat"
        android:fontFamily="serif"
        android:textSize="15dp"
        android:background="#fff"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUpdatePictureFood"
        android:drawableLeft="@drawable/icon64pxupdate"
        android:layout_weight="0.07" />

</LinearLayout>