<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nguye.restaurant_project.update_button.InsertTable">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_insert_table_khuvuc"/>
    <Spinner
        android:id="@+id/spTableNameInsert"
        android:layout_width="match_parent"
        android:spinnerMode="dropdown"
        android:layout_height="34dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_insert_table_ban" />

    <EditText
        android:id="@+id/edtTableNameInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="" />

    <Button
        android:id="@+id/btnTableNameInsert"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_insert_table_button" />
</LinearLayout>
