<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nguye.restaurant_project.activity.ThanhToanActivity">

    <ListView
        android:id="@+id/lvOrder"
        android:layout_width="match_parent"
        android:layout_height="200dp"></ListView>

    <TableLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/activity_thanh_toan_Ban"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txtTenBanOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorText"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/activity_thanh_toan_sp"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txtSoPhieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorText"
                android:textSize="18dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/activity_thanh_toan_sl"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/txtSL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorText"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="@string/activity_thanh_toan_tongtien"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/txttongTien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:text="0"
                android:textColor="@color/colorText"
                android:textSize="18dp"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/btnThanhtoan"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:text="@string/activity_thanh_toan_button_thanhtoan"
            android:drawableLeft="@drawable/coin"
            android:background="#25e2d6"/>

        <Button
            android:id="@+id/btnThem"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/activity_thanh_toan_button_themmon"
            android:drawableLeft="@drawable/add"
            android:layout_marginLeft="50dp"
            android:background="#4ab648"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearSua"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:weightSum="10"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/btnQuaylai"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorPrimaryDark"
            app:srcCompat="@drawable/left_arrow"
            android:textSize="20sp"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/btnThaydoiSL"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="#FFB9691A"
            android:text="@string/activity_thanh_toan_thaydoisl"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_weight="4"/>

        <Button
            android:id="@+id/btnHuymon"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@color/colorButton"
            android:text="@string/activity_thanh_toan_huymon"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_weight="3"/>
    </LinearLayout>

</LinearLayout>
