<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/appbar_padding_top"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.nguye.restaurant_project.activity.DangKyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/txtTieuDe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dangky"
            android:textSize="@dimen/size25sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/khungdk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/edTenDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/tendangnhap"
            android:padding="@dimen/size10dp"
            android:textColor="@color/colorStrokeButton" />
        <EditText
            android:id="@+id/edMatKhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/matkhau"
            android:textColor="@color/colorStrokeButton"
            android:padding="@dimen/size10dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:password="true"/>
        <RadioGroup
            android:id="@+id/groupGT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size10dp">
            <RadioButton
                android:id="@+id/rdNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"
                android:layout_weight="1"
                android:textSize="@dimen/size20dp"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rdNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"
                android:layout_weight="1"
                android:textSize="@dimen/size20dp"/>
        </RadioGroup>
        <Spinner
            android:id="@+id/spQuyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
        <EditText
            android:id="@+id/edNgaySinh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/ngaysinh"
            android:textColor="@color/colorStrokeButton"
            android:padding="@dimen/size10dp"
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp" />
        <EditText
            android:id="@+id/edCMND"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/cmnd"
            android:padding="@dimen/size10dp"
            android:drawableLeft="@drawable/id_card"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:maxLength="12"
            android:textColor="@color/colorStrokeButton"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/size10dp">
            <Button
                android:id="@+id/btnDongy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dongy"
                android:layout_weight="1"
                android:layout_margin="@dimen/size20dp"/>
            <Button
                android:id="@+id/btnThoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thoat"
                android:layout_weight="1"
                android:layout_margin="@dimen/size20dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
