<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:weightSum="1">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        app:srcCompat="@drawable/dollar" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.8"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txttongTien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_frmThanhtoan_tongtien"
            android:textColor="@color/colorBack"
            android:textSize="18dp" />
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_frmThanhtoan_ban"
            android:textSize="15dp"/>
        <TextView
            android:id="@+id/txttenBan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:hint="tenban+khuvuc"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_frmThanhtoan_sophieu"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/txtsoPhieu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:hint="@string/item_frmThanhtoan_maphieu"/>
        </LinearLayout>
    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="0.2"-->
        <!--android:gravity="center_horizontal|center_vertical"-->
        <!--android:text="timer"-->
        <!--android:textColor="@color/cardview_dark_background"-->
        <!--android:textSize="16dp" />-->

</LinearLayout>
