<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:weightSum="1"
    android:orientation="horizontal"
    android:layout_margin="@dimen/size10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        app:srcCompat="@drawable/money" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.8"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:padding="@dimen/size10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txttongTien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_frmThanhtoan_tongtien"
            android:textColor="@color/colorBack"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngaylap"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/txtNgayLap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:hint="@string/item_frmThanhtoan_maphieu"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
