<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nguye.restaurant_project.activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">
        <TableRow
            style="@style/TableRowStyle"
            android:weightSum="2"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnMenu"
                style="@style/TextStyle"
                android:layout_column="0"
                android:layout_margin="@dimen/margin_Button"
                android:background="@drawable/dinhdang_button"
                android:backgroundTint="@color/colorMenu"
                android:drawableTop="@drawable/menu"
                android:text="@string/content_main_monan"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnBan"
                style="@style/TextStyle"
                android:layout_column="0"
                android:layout_margin="@dimen/margin_Button"
                android:background="@drawable/dinhdang_button"
                android:backgroundTint="@color/colorTable"
                android:drawableTop="@drawable/table"
                android:text="@string/content_main_banan"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            style="@style/TableRowStyle"
            android:weightSum="2"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnOrder"
                style="@style/TextStyle"
                android:layout_width="8dp"
                android:layout_column="0"
                android:layout_margin="@dimen/margin_Button"
                android:layout_weight="1"
                android:background="@drawable/dinhdang_button"
                android:backgroundTint="@color/color1"
                android:drawableTop="@drawable/order"
                android:text="@string/content_main_xemnhanh"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btnReport"
                style="@style/TextStyle"
                android:layout_column="0"
                android:layout_margin="@dimen/margin_Button"
                android:background="@drawable/dinhdang_button"
                android:backgroundTint="@color/color"
                android:drawableTop="@drawable/report"
                android:text="@string/content_main_thongke"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            style="@style/TableRowStyle"
            android:weightSum="2"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnSetting"
                style="@style/TextStyle"
                android:layout_column="0"
                android:layout_margin="@dimen/margin_Button"
                android:background="@drawable/dinhdang_button"
                android:backgroundTint="@color/colorSetting"
                android:drawableTop="@drawable/settings"
                android:text="@string/content_main_caidat"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnAbout"
                style="@style/TextStyle"
                android:layout_column="0"
                android:layout_margin="@dimen/margin_Button"
                android:background="@drawable/dinhdang_button"
                android:backgroundTint="@color/colorPrimary"
                android:drawableTop="@drawable/help"
                android:text="@string/content_main_lienhe"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"/>
        </TableRow>

    </TableLayout>
</LinearLayout>
